2007-03-01  Jason R. Mastaler  <jason@mastaler.com>

	* SMTP.py (Connection.__connect): bugfix: TLS must come before
	SMTP AUTH or else you won't be able to use both of them together.

2007-02-23  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (format_timeout): Use Defaults.TIMEOUT_UNITS.

	* Defaults.py: (TIMEOUT_UNITS): New variable to give users the
	ability to customize the timeout strings for languages other than
	English. Contributed by Vitor Espindola.

2006-12-07  Jason R. Mastaler  <jason@mastaler.com>

	* Pending.py (Message.release): Add the IP address and browser
	info of the releaser to an 'X-TMDA-CGI' header if the message was
	released via tmda-cgi.
	
2006-10-27  Mark Horn  <mark@hornclan.com>

	* Defaults.py: added additional description to
	ACTION_EXPIRED_DATED
	
2006-10-07  Jason R. Mastaler  <jason@mastaler.com>

	* pythonlib/email: Sync up with email 4.0.1.

2006-10-04  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (PENDING_QUEUE_FORMAT): Add 'maildir'.
	
2006-09-28  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (PENDING_QUEUE_FORMAT): New variable.
	
2006-09-27  Jason R. Mastaler  <jason@mastaler.com>

	* Pending.py: Modified to use new Tmda.Queue interface.
	
	(Queue.cleanQueue): Removed.  Functionality moved into
	Queue.Queue.

	* Util.py (pager): Now accepts a string rather than a filepath.

	(pickleit): Use 'protocol' argument as introduced in Python 2.3.
	Also make the default protocol the new efficient
	binary storage format compatible with Python2.3 and up.

2006-09-19  Jason R. Mastaler  <jason@mastaler.com>

	* AutoResponse.py: Remove arabic -> iso-8859-6 alias.  UTF-8 is
	what's used for Arabic these days AFAIK.

2004-03-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Pending.py (Queue.listDeliveredIds): Removed.
	(Queue.listConfirmedIds): Ditto.
	(Queue.listReleasedIds): Ditto.
	(Queue.checkDelivered): Ditto.
	(Message.wasDelivered): Ditto.
	